compiler/typ/tests/fixtures/diagnostics/0239_adt_recursive_tree_payload_mismatch_10.ml.infer.expected
File "0239_adt_recursive_tree_payload_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0239_adt_recursive_tree_payload_mismatch_10 is not a valid module name.

File "0239_adt_recursive_tree_payload_mismatch_10.ml", line 5, characters 26-30:
5 |   Node_kappa (Leaf_kappa, true, Leaf_kappa)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
